--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Codesilva
+lang: en
+title: CodeSilva
 email: projetoscodesilva@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Welcome to my personal blog, CodeSilva! As an aspiring Software Engineer, I'm here to share my experiences, insights, and occasional coding misadventures.
@@ -34,11 +35,15 @@ plugins:
 
 header_pages:
   - about.md
+  - books.md
 
 excerpt_separator: <!--more-->
+show_excerpts: true
 
 minima:
-  skin: dark
+  social_links:
+    - { platform: youtube, username: 'Assista no YouTube', user_url: "https://youtube.com/edigleyssonsilva" }
+    - { platform: medium, username: 'Leia mais post no Medium', user_url: "https://edigleyssonsilva.medium.com" }
 
 # Exclude from processing.
 # The following items will not be processed, by default.
