--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -5,6 +5,12 @@
   slides_url: ''
   description: 'Exploramos o vasto ecossistema do Firebase. Abordamos o desenvolvimento completo de aplicações, começando pela autenticação de usuários, passando pelo banco de dados Firestore para gerenciar dados de forma eficiente, até o armazenamento seguro no Firebase Storage. Concluímos com uma visão abrangente sobre como realizar implantações eficazes utilizando o Firebase Hosting.<br/><br />Descubra como aproveitar ao máximo as ferramentas de desenvolvimento do Firebase para criar aplicativos robustos e escaláveis.'
 
+# - title: 'Paradigmas de Programação'
+#   length_in_minutes: 45
+#   talk_url: ''
+#   slides_url: ''
+#   description: ''
+
 # - title: 'Tudo é incrível com Flutter'
 #   length_in_minutes: 45
 #   talk_url: ''
