feat: enable Google Analytics and add custom head include
This commit message was generated with the help of LLMs.

This commit enables Google Analytics in `_config.yml` and introduces a custom `head.html` include to allow more control over meta tags and analytics injection. Needed to support site monitoring and ensure proper SEO configuration without overriding the entire layout structure.

--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,8 @@ header_pages:
 
 show_excerpts: true
 
+google_analytics: true
+
 minima:
   social_links:
     - { platform: youtube, username: 'Assista no YouTube', user_url: "https://youtube.com/edigleyssonsilva" }
