--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Bem-vindo ao meu blog pessoal, CodeSilva! Como um aspirante a Engenheiro de Software, estou aqui para compartilhar minhas experiências, percepções e ocasionais desventuras de programação.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://codesilva.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: edigleyssonsilva
+twitter_username: edysilva01
 github_username:  geeksilva97
 
 # Build settings
@@ -33,6 +33,7 @@ theme: minima
 plugins:
   - jekyll-feed
   - jekyll-toc
+  - jekyll-sitemap
 
 header_pages:
   - about.md
